# jplc

./: .gitignore  Makefile  README.md  dune  lexer.mll  parser.mly  spec.md
_build/: .db  .digest-db  log
_build/.aliases/default/: all-00000000000000000000000000000000
_build/default/: README.md  dune  jplc.ml
_build/default/.dune/: configurator  configurator.v2
_build/default/.jplc.eobjs/byte/: dune__exe__Jplc.cmi  dune__exe__Jplc.cmo  dune__exe__Jplc.cmt
_build/default/.jplc.eobjs/native/: dune__exe__Jplc.cmx
_build/default/.merlin-conf/: exe-jplc
parsing/: ast.mli  ast_utils.ml  ast_utils.mli  dune  frontend.ml  frontend.mli  lexer.mll  parser.mly  sexp_ast.ml  sexp_ast.mli
src/: Makefile  compile_jpl.ml  compile_jpl.mli  compiler.ml  compiler.mli  dune  jplc.ml  test.jpl
src/ast_utils/: ast_utils.ml  ast_utils.mli  dune
src/codegen/: cg.ml  codegen.ml  codegen.mli  dune
src/flattening/: README.md  ast.ml  ast.mli  dune  env.ml  env.mli  flattener.ml  flattener.mli  sexp_ast.ml  sexp_ast.mli
src/interping/: dune  interp.ml  interp.mli  show.ml  ty.ml
src/jir/: dune  env.ml  info.md  jir_lang.ml  jir_tree.ml  make_jir.ml  pp.ml  pp_jir.ml
src/parsing/: ast.ml  ast.mli  ast_utils.ml  ast_utils.mli  dune  lex_parse.ml  lex_parse.mli  lexer.mll  parser.messages  parser.mly  pp.ml  pp.mli  sexp_ast.ml  sexp_ast.mli
src/runtime/: dune  lib.c  lib.h  lib.ml  pngstuff.c  runtime.ml  runtime.mli
src/runtime/c-lib/: Makefile  lib.c  lib.h  pngstuff.c
src/typing/: '  ast.ml  ast.mli  dune  env.ml  env.mli  pp.ml  sexp_ast.ml  typechecker.ml  typechecker.mli
src/utils/: dune  err.ml  err.mli  functional.ml  pp.ml  pp.mli
test/: dune
test/parser/: dune  fuzz_parse.ml  parse_test_utils.ml  ppp.ml  simple_fail.ml  simple_parse.ml
test/typechecker/: dune  fail_type.ml  ppp.ml  simple_type.ml
